<resources>
    <string name="app_name">Money Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="first_onboard_screen_subtext">Düzenlemene yardımcı olacak!</string>
    <string name="first_onboard_screen_text">Harcama Takip Uygulaması</string>
    <string name="gec">Geç</string>
    <string name="second_onboard_screen_text">Kolayca Kategorilendir</string>
    <string name="second_onboard_screen_subtext">Daha kolay takip et!</string>
    <string name="third_onboard_screen_text">Farklı Para Birimleri</string>
    <string name="third_onboard_screen_subtext">Harcamalarını sürekli güncel kur ile takip et!</string>
    <string name="bitir">Bitir</string>
    <string name="ekle">Ekle</string>
    <string name="merhaba">Merhaba</string>
    <string name="erkek">Erkek</string>
    <string name="kadin">Kadın</string>
    <string name="belirtmek_istemiyorum">Belirtmek İstemiyorum</string>
    <string name="isminizi_giriniz">İsminizi Giriniz</string>
    <string name="isim_degistir">İsim Değiştir</string>
    <string name="kaydet">Kaydet</string>
    <string name="tl">TL</string>
    <string name="dolar">Dolar</string>
    <string name="euro">Euro</string>
    <string name="sterlin">Sterlin</string>
    <string name="harcama_ekle">Harcama Ekle</string>
    <string name="aciklama">Açıklama</string>
    <string name="harcama">Harcama</string>
    <string name="fatura">Fatura</string>
    <string name="kira">Kira</string>
    <string name="diger">Diğer</string>
    <string name="sil">Sil</string>
    <string name="sample_tutar">Harcamanız\n%s %s</string>
    <string name="harcama_tutar_tipli">%s</string>
    <string name="detay_para_birimi">%s %s</string>

</resources>