<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_view_id"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="12dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="22dp"
            app:layout_constraintStart_toStartOf="@id/root_constraintlayout"
            app:layout_constraintTop_toTopOf="@id/root_constraintlayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardview_constraintlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/merhaba_textview"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/merhaba"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/who_is_button"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="feyyaz"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/merhaba_textview"
                    app:layout_constraintTop_toBottomOf="@id/merhaba_textview" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/harcama_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/harcamaniz"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tl_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tl"
            app:cornerRadius="22dp"
            app:layout_constraintEnd_toStartOf="@id/dolar_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/material_card_view_id"
            app:layout_constraintTop_toBottomOf="@id/material_card_view_id" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dolar_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolar"
            app:cornerRadius="22dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/euro_button"
            app:layout_constraintStart_toEndOf="@id/tl_button"
            app:layout_constraintTop_toBottomOf="@id/material_card_view_id" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/euro_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:layout_marginTop="8dp"
            app:cornerRadius="22dp"
            app:layout_constraintEnd_toStartOf="@id/sterlin_button"
            app:layout_constraintStart_toEndOf="@id/dolar_button"
            app:layout_constraintTop_toBottomOf="@id/material_card_view_id" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sterlin_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sterlin"
            android:layout_marginTop="8dp"
            app:cornerRadius="22dp"
            app:layout_constraintEnd_toEndOf="@id/material_card_view_id"
            app:layout_constraintStart_toEndOf="@id/euro_button"
            app:layout_constraintTop_toBottomOf="@id/material_card_view_id" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tl_button"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/harcama_list"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/ekle"
        app:srcCompat="@drawable/ic_baseline_add_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>